--- a/README.adoc
+++ b/README.adoc
@@ -40,7 +40,7 @@ addSbtPlugin("com.thesamet" % "sbt-protoc" % "1.0.7")
 
 libraryDependencies ++= Seq(
   "com.thesamet.scalapb" %% "compilerplugin" % "0.11.17",
-  "io.github.sfali23" %% "grpc-rest-gateway-code-gen" % "0.8.5"
+  "io.github.sfali23" %% "grpc-rest-gateway-code-gen" % "0.8.6"
 )
 ----
 
@@ -77,7 +77,7 @@ Add following dependencies
 val ScalaPb: String = scalapb.compiler.Version.scalapbVersion
 val GrpcJava: String = scalapb.compiler.Version.grpcJavaVersion
 libraryDependencies ++= Seq(
-  "io.github.sfali23" %% "grpc-rest-gateway-runtime-netty" % "0.8.5",
+  "io.github.sfali23" %% "grpc-rest-gateway-runtime-netty" % "0.8.6",
   "com.thesamet.scalapb" %% "compilerplugin" % V.ScalaPb % "compile;protobuf",
   "com.thesamet.scalapb" %% "scalapb-runtime" % V.ScalaPb % "compile;protobuf",
   "com.thesamet.scalapb" %% "scalapb-runtime-grpc" % V.ScalaPb,
@@ -101,7 +101,7 @@ lazy val root = project
   .enablePlugins(PekkoGrpcPlugin)
   .settings(
       libraryDependencies ++= Seq(
-        "io.github.sfali23" %% "grpc-rest-gateway-runtime-pekko" % "0.8.5",
+        "io.github.sfali23" %% "grpc-rest-gateway-runtime-pekko" % "0.8.6",
         "org.apache.pekko" %% "pekko-actor" % "1.1.2",
         "org.apache.pekko" %% "pekko-actor-typed" % "1.1.2",
         "org.apache.pekko" %% "pekko-stream-typed" % "1.1.2",
@@ -489,6 +489,8 @@ rest-gateway {
   host = ${?REST_GATEWAY_HOST}
   port = 7070
   port = ${?REST_GATEWAY_PORT}
+  hard-termination-deadline = 10.seconds // For Coordinated shutdown
+  hard-termination-deadline = ${?REST_GATEWAY_HARD_TERMINATION_DEADLINE}
 }
 ----
 
@@ -500,8 +502,16 @@ implicit val system: ActorSystem[?] = ActorSystem[Nothing](Behaviors.empty, "grp
 
 val settings = GrpcClientSettings.fromConfig("pekko-gateway")
 val config = system.settings.config
+val restGatewayConfig = config.getConfig("rest-gateway")
 GatewayServer(
-  config.getConfig("rest-gateway"),
+  restGatewayConfig,
+  TestServiceBGatewayHandler(settings)
+).run()
+
+// Or using HttSettings
+
+GatewayServer(
+  HttpSettings(restGatewayConfig),
   TestServiceBGatewayHandler(settings)
 ).run()
 ----
